--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,4 +21,4 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-        - { path: '^/', roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        #- { path: '^/', roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
